# ai_engineer

./: .gitignore  LICENSE.md  README.md  ai_eng.py  ai_engineer.py  ai_engineer_help.md  config.toml  config.toml.example  pyproject.toml  requirements-dev.txt  requirements.txt  system_prompt_default.md  system_prompt_pirate.md
.aie_rules/: 000_rules_header.md  020_file_operation_rules.md  050_general_guidelines.md  060_communication_style.md  080_code_change_generation_rules.md  100_clean-code.md  105_codequality.md  111_code_eccellence_and_analysis.md  500_python.md  510_cpp.md  520_database.md  530_fastapi.md  540_nextjs.md  550_node-express.md  560_react.md  570_svelte.md  580_tailwind.md  590_typescript.md  595_vue.md  600_gitflow.md  999_rules_trailer.md  _default.md  fastapi.md  nextjs.md
.aie_rules_all/: 010_code_analysis_rules.md  030_network_operation_rules.md  040_effort_control_rules.md  070_tool_usage_principles.m  500_python_guidelines.md  550_node-express.md  560_react.md  570_svelte.md  580_tailwind.md  600_gitflow.md
help/: context.md  help.md  prompt.md  rules.md  set.md
poc/: poc_litellm_cerebras.py  poc_litellm_chat.py  poc_litellm_gemini.py  poc_litellm_lmstudio.py
poc/poc_KVzip/: KVzip.md  KVzip_prompt_1.txt  KVzip_prompt_2.txt  kvzip_litellm_provider.py  poc_KVzip.py  poc_KVzip_repo.py
rules/: _default.md  cpp.md  database.md  python.md  typescript.md  vue.md
scripts/: test_script.aiescript
src/: app_state.py  command_handlers.py  config_utils.py  config_utils.py-OLD  data_models.py  file_context_utils.py  file_utils.py  inference_tester.py  llm_interaction.py  network_utils.py  prompts.py  routing_logic.py  rules_manager.py  script_runner.py  startup_checks.py  tool_defs.py  ui_display.py
src/commands/: __init__.py  add_command.py  ask_command.py  context_command.py  debug_command.py  help_command.py  prompt_command.py  rules_command.py  script_command.py  session_command.py  set_command.py  shell_command.py  show_command.py  time_command.py
tests/: mock_mcp_server.py  test_ai_eng.py  test_ai_engineer.py  test_config_utils.py  test_file_utils.py  test_prompt2.txt  test_prompt3.txt  test_prompt4.txt  test_prompt_bouncing_ball_hexagon_html.md  test_prompt_bouncing_ball_hexagon_python.txt  test_prompts.py  test_tool_defs.py
