[project]
name = "ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.72.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.5", # As seen in requirements.txt
    "python-dotenv>=1.1.0", # As seen in requirements.txt
    "rich>=14.0.0",     # As seen in requirements.txt
    "httpx>=0.28.1",    # As seen in requirements.txt
    "markdown>=3.8",    # As seen in requirements.txt
]

[project.optional-dependencies] # Dependencies required for development and testing
test = [
    "pytest>=8.4.0", # As seen in your pytest output
    "pytest-cov>=6.1.1", # Updated from requirements.txt
    "flask>=3.1.1",      # From requirements.txt
    "toml>=0.10.2",      # From requirements.txt
]

[tool.pytest.ini_options]
# Add --cov to enable coverage reporting
# Add --cov-report=term-missing to show missing lines in the terminal report
# Enable coverage collection; specific sources are defined in [tool.coverage.run]
addopts = "--tb=short --cov --cov-report=term-missing"
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated, use ConfigDict instead:pydantic.PydanticDeprecatedSince20",
]

# Coverage

[tool.coverage.run]
# Specify the source directories or files to include in coverage analysis.
# This tells coverage.py which code to measure.
source = ["src"]

[tool.coverage.report]
fail_under = 50
